fix z-index

--- a/static/scss/_misc.scss
+++ b/static/scss/_misc.scss
@@ -25,8 +25,6 @@ blockquote {
 }
 
 
-
-
 .side-card {
   display: flex;
   position: relative;
@@ -100,3 +98,6 @@ footer {
   }
 }
 
+.lum-lightbox {
+  z-index: 50;
+}
